group_settings: Fix member list container scrolling.
Added resize function to correctly calculate the maximum height
of the member list container, similar to how it is done
for the subscriber list. This prevents the outer scrollbar from
being incorrectly triggered in the user group settings overlay.

- Called the resize function only after the elements are visible,
  ensuring their heights are computed correctly instead of returning 0.

- Some elements above the member list are not always visible,
  so their height is handled as 0 when they are not present.

--- a/web/styles/app_variables.css
+++ b/web/styles/app_variables.css
@@ -694,6 +694,8 @@
     */
     --stream-subscriber-list-max-height: 100%;
     --new-stream-subscriber-list-max-height: 100%;
+    --group-member-list-max-height: 100%;
+
     /*
       Reusable dimensions and offsets.
     */
